# BnsPlugins

./: CMakeLists.txt  README.md
bns_client_plugins/antigg/: CMakeLists.txt
bns_client_plugins/antigg/src/: dllmain.cpp  pattern.cpp  pattern.h
bns_client_plugins/bnspatch/: CMakeLists.txt
bns_client_plugins/bnspatch/src/: dllmain.cpp  hooks.cpp  hooks.h  xmlpatch.cpp
bns_client_plugins/bugfixes/: CMakeLists.txt
bns_client_plugins/bugfixes/src/: dllmain.cpp
bns_client_plugins/loginhelper/: CMakeLists.txt
bns_client_plugins/loginhelper/src/: dllmain.cpp  pattern_helper.h  state.h
bns_client_plugins/loginhelper/src/game_versions/: privateserver_x86.cpp  privateserver_x86.h
bns_client_plugins/whitelistnetwork/: CMakeLists.txt
bns_client_plugins/whitelistnetwork/src/: dllmain.cpp
bns_server_plugins/lesslogging/: CMakeLists.txt
bns_server_plugins/lesslogging/src/: bugged_old.txt  dllmain.cpp
cmake/: Bns.cmake  FetchContentExtensions.cmake
plugin_loader/: CMakeLists.txt
plugin_loader/src/: dllmain.cpp  version_x86.def  winmm_x64.def  winmm_x86.def
